--- a/index.html
+++ b/index.html
@@ -13,18 +13,21 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <section>
+    <section class="content">
         <h1>Pokedex</h1>
-        <ol>
-            <li>
-                Bulbasaur
+        <ol class="pokemons">
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
             </li>
-            <li>
-                Ivysaur
-            </li>
-            <li>
-                Venusaur
-            </li>
+    
         </ol>
     </section>
     <script src="assets/js/main.js"></script>
