--- a/index.html
+++ b/index.html
@@ -27,7 +27,95 @@
                     <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
                 </div>
             </li>
-    
+            
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
+            <li class="pokemon">
+                <span class="number">#001</span>
+                <samp class="name">Bulbasaur</samp>
+                <div class="detail">
+                    <ol class="types">
+                        <li class="type">grass</li>
+                        <li class="type">poison</li>
+                    </ol>
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                </div>
+            </li>
         </ol>
     </section>
     <script src="assets/js/main.js"></script>
