--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,13 +11,25 @@
 
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/pokedex.css">
+    <link rel="stylesheet" href="assets/css/menu.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <menu>
+        <nav id="sidebar">
+            <div id="user">
+                <img src="assets/img/avatar.jpg" id="user_avatar" alt="avatar">
+            </div>
+        </nav>
+    </menu>
+
+
+
     <section class="content">
+        
         <h1>Pokedex</h1>
             <ol class="pokemons">
                 <li class="pokemon">
@@ -31,12 +43,9 @@
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
                     </div>
                 </li>
-                
             </ol>
     </section>
 
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/poke_api.js"></script>
-    <script src="assets/js/pokemon_model.js"></script>
 </body>
 </html>
