--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 </head>
 <body>
     <section id="content">
+        <div id="black"></div>
         <nav id="sidebar">
             <div id="sidebar_content">
                 <div id="user">
