--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
     <!--CSS-->
     <link rel="stylesheet" href="assets/css/global.css">
     <link rel="stylesheet" href="assets/css/pokedex.css">
-    <link rel="stylesheet" href="assets/css/menu.css">
     <!--Fontes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -25,34 +24,368 @@
     <section id="content">
         <main>
             <h1>Pokedex</h1>
-            <ol class="pokemons">
-                <button class="learn_more">
-                    <li class="pokemon">
-                        <span class="number">#001</span>
-                        <samp class="name">Bulbasaur</samp>
-                        <div class="detail">
-                            <ol class="types">
-                                <li class="type">grass</li>
-                                <li class="type">poison</li>
-                            </ol>
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
-                        </div>
-                    </li>
-                </button>
-                
+            <ol id="pokemonList" class="pokemons">
                 <li class="pokemon">
-                    <span class="number">#001</span>
+                <span class="number">#001</span>
                     <samp class="name">Bulbasaur</samp>
                     <div class="detail">
                         <ol class="types">
                             <li class="type">grass</li>
                             <li class="type">poison</li>
                         </ol>
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg"" alt="Bulbasaur">
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
+                    </div>
+                </li>
+                
+                <li class="pokemon">
+                    <span class="number">#002</span>
+                    <samp class="name">Ivysaur</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">grass</li>
+                            <li class="type">poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/2.svg" alt="Ivysaur">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#003</span>
+                    <samp class="name">Venusaur</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">grass</li>
+                            <li class="type">poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/3.svg" alt="Venusaur">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#004</span>
+                    <samp class="name">Charmander</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Fire</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/4.svg" alt="Charmander">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#005</span>
+                    <samp class="name">Charmeleon</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Fire</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/5.svg" alt="Charmeleon">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#006</span>
+                    <samp class="name">Charizard</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Fire</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/6.svg" alt="Charizard">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#007</span>
+                    <samp class="name">Squirtle</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Water</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/7.svg" alt="Squirtle">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#008</span>
+                    <samp class="name">Wartortle</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Water</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/8.svg" alt="Wartortle">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#009</span>
+                    <samp class="name">Blastoise</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Water</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/9.svg" alt="Blastoise">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#010</span>
+                    <samp class="name">Caterpie</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/10.svg" alt="Caterpie">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#011</span>
+                    <samp class="name">Metapod</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/11.svg" alt="Metapod">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#012</span>
+                    <samp class="name">Butterfree</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/12.svg" alt="Butterfree">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#013</span>
+                    <samp class="name">Weedle</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/13.svg" alt="Weedle">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#014</span>
+                    <samp class="name">Kakuna</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/14.svg" alt="Kakuna">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#015</span>
+                    <samp class="name">Beedrill</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Bug</li>
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/15.svg" alt="Beedrill">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#016</span>
+                    <samp class="name">Pidgey</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/16.svg" alt="Pidgey">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#017</span>
+                    <samp class="name">Pidgeotto</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/17.svg" alt="Pidgeotto">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#018</span>
+                    <samp class="name">Pidgeot</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/18.svg" alt="Pidgeot">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#019</span>
+                    <samp class="name">Rattata</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/19.svg" alt="Rattata">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#020</span>
+                    <samp class="name">Raticate</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/20.svg" alt="Raticate">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#021</span>
+                    <samp class="name">Spearow</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/21.svg" alt="Spearow ">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#022</span>
+                    <samp class="name">Fearow</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Normal</li>
+                            <li class="type">Flying</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/22.svg" alt="Fearow">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#023</span>
+                    <samp class="name">Ekans</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/23.svg" alt="Ekans">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#024</span>
+                    <samp class="name">Arbok</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/24.svg" alt="Arbok">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#025</span>
+                    <samp class="name">Pikachu</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Electric</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/25.svg" alt="Pikachu">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#026</span>
+                    <samp class="name">Raichu</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Electric</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/26.svg" alt="Raichu">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#027</span>
+                    <samp class="name">Sandshrew</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Ground</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/27.svg" alt="Sandshrew">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#028</span>
+                    <samp class="name">Sandslash</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Ground</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/28.svg" alt="Sandslash">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#029</span>
+                    <samp class="name">Nidoran</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/29.svg" alt="Nidoran">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#030</span>
+                    <samp class="name">Nidorina</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Poison</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/30.svg" alt="Nidorina">
+                    </div>
+                </li>
+
+                <li class="pokemon">
+                    <span class="number">#031</span>
+                    <samp class="name">Nidoqueen</samp>
+                    <div class="detail">
+                        <ol class="types">
+                            <li class="type">Poison</li>
+                            <li class="type">Ground</li>
+                        </ol>
+                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/31.svg" alt="Nidoqueen">
                     </div>
                 </li>
             </ol>
         </main>
+
+        <div>
+
+        </div>
+
     </section>
 
     <script src="assets/js/main.js"></script>
