--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
                     </div>
                 </li>
+                <!--
                 
                 <li class="pokemon">
                     <span class="number">#002</span>
@@ -379,11 +380,14 @@
                         <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/31.svg" alt="Nidoqueen">
                     </div>
                 </li>
+                -->
             </ol>
         </main>
-
-        <div>
-
+        
+        <div class="pagination">
+            <button id="loadMoreButton" type="button">
+                Load More
+            </button>
         </div>
 
     </section>
